fix: delete inline-block for svg-after; add block'new'

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="cards-inner">
+                    <div class="cards-inner new">
                         <img class="cards-inner__img" src="./assets/img/корм.png" alt="корм" width="275" height="227">
                         <h3 class="cards-inner__title">PADOVAN OVOMIX GOLD ROSSO</h3>
                         <h3 class="cards-inner__subtitle">Корм для птиц</h3>
@@ -148,7 +148,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="cards-inner">
+                    <div class="cards-inner new">
                         <img class="cards-inner__img" src="./assets/img/корм.png" alt="корм" width="275" height="227">
                         <h3 class="cards-inner__title">PADOVAN OVOMIX GOLD ROSSO</h3>
                         <h3 class="cards-inner__subtitle">Корм для птиц</h3>
