feat:add header scss

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                             <a href="#">
                                 <img class="header__top-icons__shopping-cart" src="./assets/svg/корзина.svg"
                                     alt="shopping-cart" width="30" height="30">
+                                <span class="number_of_products">2</span>
                             </a>
+
                         </div>
                         <div class="account">
                             <a href="#">
