--- a/basket.html
+++ b/basket.html
@@ -78,121 +78,124 @@
                 </div>
                 <div class="block-wrapper">
                     <h3 class="block-wrapper__title">Корзина</h3>
-                    <div class="block-inner">
-                        <div class="block-inner__item">
-                            <div class="block-inner__img">
-                                <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
-                                    width="129" height="140">
-                            </div>
-                            <div class="block-inner__someinfo">
-                                <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
-                                </h4>
-                                <span class="block-inner__someinfo__article">Артикул Т00001632</span>
-                                <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
-                            </div>
-                            <div class="block-inner__number">
-                                <h4>Количество</h4>
-                                <div class="block-inner__number__btn">
-                                    <button>
-                                        <img src="./assets/svg/minus.svg" alt="minus">
-                                    </button>
-                                    <input type="number" value="1">
-                                    <button>
-                                        <img src="./assets/svg/plus.svg" alt="plus">
-                                    </button>
+                    <div class="wrapper__backgr">
+                        <div class="block-inner">
+                            <div class="block-inner__item">
+                                <div class="block-inner__img">
+                                    <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
+                                        width="129" height="140">
                                 </div>
-                                <p>Итого: <span>228 руб</span></p>
+                                <div class="block-inner__someinfo">
+                                    <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
+                                    </h4>
+                                    <span class="block-inner__someinfo__article">Артикул Т00001632</span>
+                                    <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
+                                </div>
+                                <div class="block-inner__number">
+                                    <h4>Количество</h4>
+                                    <div class="block-inner__number__btn">
+                                        <button>
+                                            <img src="./assets/svg/minus.svg" alt="minus">
+                                        </button>
+                                        <input type="number" value="1">
+                                        <button>
+                                            <img src="./assets/svg/plus.svg" alt="plus">
+                                        </button>
+                                    </div>
+                                    <p>Итого: <span>228 руб</span></p>
+                                </div>
+                            </div>
+                            <div class="block-inner__item">
+                                <div class="block-inner__img">
+                                    <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
+                                        width="129" height="140">
+                                </div>
+                                <div class="block-inner__someinfo">
+                                    <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
+                                    </h4>
+                                    <span class="block-inner__someinfo__article">Артикул Т00001632</span>
+                                    <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
+                                </div>
+                                <div class="block-inner__number">
+                                    <h4>Количество</h4>
+                                    <div class="block-inner__number__btn">
+                                        <button>
+                                            <img src="./assets/svg/minus.svg" alt="minus">
+                                        </button>
+                                        <input type="number" value="1">
+                                        <button>
+                                            <img src="./assets/svg/plus.svg" alt="plus">
+                                        </button>
+                                    </div>
+                                    <p>Итого: <span>228 руб</span></p>
+                                </div>
+                            </div>
+                            <div class="block-inner__item">
+                                <div class="block-inner__img">
+                                    <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
+                                        width="129" height="140">
+                                </div>
+                                <div class="block-inner__someinfo">
+                                    <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
+                                    </h4>
+                                    <span class="block-inner__someinfo__article">Артикул Т00001632</span>
+                                    <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
+                                </div>
+                                <div class="block-inner__number">
+                                    <h4>Количество</h4>
+                                    <div class="block-inner__number__btn">
+                                        <button>
+                                            <img src="./assets/svg/minus.svg" alt="minus">
+                                        </button>
+                                        <input type="number" value="1">
+                                        <button>
+                                            <img src="./assets/svg/plus.svg" alt="plus">
+                                        </button>
+                                    </div>
+                                    <p>Итого: <span>228 руб</span></p>
+                                </div>
+                            </div>
+                            <div class="block-inner__item">
+                                <div class="block-inner__img">
+                                    <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
+                                        width="129" height="140">
+                                </div>
+                                <div class="block-inner__someinfo">
+                                    <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
+                                    </h4>
+                                    <span class="block-inner__someinfo__article">Артикул Т00001632</span>
+                                    <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
+                                </div>
+                                <div class="block-inner__number">
+                                    <h4>Количество</h4>
+                                    <div class="block-inner__number__btn">
+                                        <button>
+                                            <img src="./assets/svg/minus.svg" alt="minus">
+                                        </button>
+                                        <input type="number" value="1">
+                                        <button>
+                                            <img src="./assets/svg/plus.svg" alt="plus">
+                                        </button>
+                                    </div>
+                                    <p>Итого: <span>228 руб</span></p>
+                                </div>
                             </div>
                         </div>
-                        <div class="block-inner__item">
-                            <div class="block-inner__img">
-                                <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
-                                    width="129" height="140">
-                            </div>
-                            <div class="block-inner__someinfo">
-                                <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
-                                </h4>
-                                <span class="block-inner__someinfo__article">Артикул Т00001632</span>
-                                <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
-                            </div>
-                            <div class="block-inner__number">
-                                <h4>Количество</h4>
-                                <div class="block-inner__number__btn">
-                                    <button>
-                                        <img src="./assets/svg/minus.svg" alt="minus">
-                                    </button>
-                                    <input type="number" value="1">
-                                    <button>
-                                        <img src="./assets/svg/plus.svg" alt="plus">
-                                    </button>
+                        <div class="donation__wrapper">
+                            <div class="donation">
+                                <h3 class="donation__title">Сделайте пожертвование в наш фонд</h3>
+                                <div class="donation__form">
+                                    <form>
+                                        <input type="number" placeholder="Введите сумму">
+                                        <button type="submit">Пожертвовать</button>
+                                    </form>
                                 </div>
-                                <p>Итого: <span>228 руб</span></p>
                             </div>
-                        </div>
-                        <div class="block-inner__item">
-                            <div class="block-inner__img">
-                                <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
-                                    width="129" height="140">
-                            </div>
-                            <div class="block-inner__someinfo">
-                                <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
-                                </h4>
-                                <span class="block-inner__someinfo__article">Артикул Т00001632</span>
-                                <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
-                            </div>
-                            <div class="block-inner__number">
-                                <h4>Количество</h4>
-                                <div class="block-inner__number__btn">
-                                    <button>
-                                        <img src="./assets/svg/minus.svg" alt="minus">
-                                    </button>
-                                    <input type="number" value="1">
-                                    <button>
-                                        <img src="./assets/svg/plus.svg" alt="plus">
-                                    </button>
-                                </div>
-                                <p>Итого: <span>228 руб</span></p>
-                            </div>
-                        </div>
-                        <div class="block-inner__item">
-                            <div class="block-inner__img">
-                                <img class="block-inner__img__item" src="./assets/img/inBasket.jpg" alt="inBasket"
-                                    width="129" height="140">
-                            </div>
-                            <div class="block-inner__someinfo">
-                                <h4 class="block-inner__someinfo__title">Корм для птиц FIORY Смесь для попугаев 400г
-                                </h4>
-                                <span class="block-inner__someinfo__article">Артикул Т00001632</span>
-                                <p class="block-inner__someinfo__price">Цена за 1 шт:<span>228 руб.</span></p>
-                            </div>
-                            <div class="block-inner__number">
-                                <h4>Количество</h4>
-                                <div class="block-inner__number__btn">
-                                    <button>
-                                        <img src="./assets/svg/minus.svg" alt="minus">
-                                    </button>
-                                    <input type="number" value="1">
-                                    <button>
-                                        <img src="./assets/svg/plus.svg" alt="plus">
-                                    </button>
-                                </div>
-                                <p>Итого: <span>228 руб</span></p>
-                            </div>
+                            <button class="donation__subbutton">Оплатить</button>
                         </div>
                     </div>
                 </div>
-                <div class="donation">
-                    <h3 class="donation__title">Сделайте пожертвование в наш фонд</h3>
-                    <div class="donation__form">
-                        <form>
-                            <input type="number" placeholder="Введите сумму">
-                            <button type="submit">Пожертвовать</button>
-                        </form>
-                    </div>
-                </div>
-                <button class="donation__subbutton">Оплатить</button>
             </div>
-        </div>
     </main>
     <footer class="footer">
         <div class="container">
